WW-2537 adds usage of generics and some minor code improvements
git-svn-id: https://svn.apache.org/repos/asf/struts/struts2/trunk@1397705 13f79535-47bb-0310-9956-ffa450edef68